# duelpvp

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: DiceDuel.html
app/src/: anchor-client.ts
duelpvp/duelpvp/: Anchor.toml  README.md  package.json
duelpvp/duelpvp/app/: DiceDuel.html
duelpvp/duelpvp/app/src/: anchor-client.ts
duelpvp/duelpvp/programs/duelpvp/: Cargo.toml
duelpvp/duelpvp/programs/duelpvp/src/: errors.rs  lib.rs  state.rs
duelpvp/duelpvp/scripts/: init-treasury.ts
duelpvp/duelpvp/tests/: duelpvp.ts
programs/duelpvp/: Cargo.toml
programs/duelpvp/src/: errors.rs  lib.rs  state.rs
scripts/: devnet-smoke.ts  import-phantom-key.mjs  init-treasury.ts  withdraw-treasury.ts
tests/: duelpvp.ts
