[package]
name = "duelpvp"
version = "0.1.0"
description = "Trustless PvP dice duel escrow with ORAO VRF randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "duelpvp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Pinned to 0.29.0 to match orao-solana-vrf 0.4.0 (which hard-pins anchor-lang
# 0.29.0). A single anchor-lang version is required so ORAO's account types
# satisfy our program's anchor trait bounds.
anchor-lang = "0.29.0"
# ORAO VRF, CPI feature only (we call it, we are not it).
orao-solana-vrf = { version = "0.4.0", default-features = false, features = ["cpi"] }
