[package]
name = "duelpvp"
version = "0.1.0"
description = "Trustless PvP dice duel escrow with ORAO VRF randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "duelpvp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# ORAO VRF, CPI feature only (we call it, we are not it).
orao-solana-vrf = { version = "0.4.0", default-features = false, features = ["cpi"] }
